[tool.poetry]
name = "advent-of-code-2023-python"
version = "0.1.0"
description = ""
authors = ["Daniel <huffdanielt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
